Action buttons alignment css issue resolved

--- a/src/app/modules/common-master/components/forms/parent-form/parent-form.component.scss
+++ b/src/app/modules/common-master/components/forms/parent-form/parent-form.component.scss
@@ -79,15 +79,13 @@ mat-label {
 }
 .card {
   border: none;
-  // margin-top: -2.7%;
-  // margin-left: -3%;
-  margin-bottom: 2% !important;
-  z-index: 10;
+
   letter-spacing: 0.5px;
-  width: 152%; /* 100% of viewport width */
-  height: 100vh; /* 100% of viewport height */
-  /* Adjust the z-index as needed */
-  //overflow-y: auto;
+  width: 152%;
+  height: 99vh;
+  margin-bottom: 2% !important;
+
+  height: 88vh;
 }
 @media (max-width: 100%) {
   .card {
