--- a/src/app/modules/main/components/forms/certification-form/certification-form.component.scss
+++ b/src/app/modules/main/components/forms/certification-form/certification-form.component.scss
@@ -51,7 +51,8 @@
 }
 .justify-content-end {
   justify-content: flex-end !important;
-  width: 99%;
+  width: 97%;
+  margin-bottom: 4%;
 }
 .action-btn {
   margin: 3px;
