--- a/src/app/modules/main/components/forms/work-experience-form/work-experience-form.component.scss
+++ b/src/app/modules/main/components/forms/work-experience-form/work-experience-form.component.scss
@@ -51,7 +51,7 @@
 }
 .justify-content-end {
   justify-content: flex-end !important;
-  width: 99%;
+  width: 104%;
 }
 .action-btn {
   margin: 3px;
